--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ plugins:
 
 author:
   name   : "Parakhatdin Nuratdinov"
-  avatar : "/assets/images/DSCF8847.png"
+  avatar : "/assets/images/general.png"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
     - label: "Website"
